<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="service_started">Location Service started</string>
    <string name="service_label">Location Service Label</string>
    <string name="action_settings">Settings</string>
    <string name="name">Enter a name</string>
    <string name="start">Enter the start location</string>
    <string name="destination">Enter the destination</string>
    <string name="friends">Enter friends</string>
    <string name="start_time">Enter the start time</string>
    <string name="tripTime">Enter join time</string>
    <string name="tripDateHint">Input trip date</string>
    <string name="tripTimeHint">Input trip time</string>
    <string name="CreateTriptime">Trip time</string>
    <string name="create">Let us start</string>
    <string name="create_trip">Create the trip</string>
    <string name="view">Check the Trip</string>
    <string name="title_activity_view_trip">ViewTrip</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel the Trip!</string>
    <string name="title_activity_create_trip">createTrip</string>
    <string name="trip_history">View Trip history</string>
    <string name="plusFriends">add a friend from contact</string>
    <string name="checkPlace">check the place using API</string>
    <string name="place">search place</string>
    <string name="food">food</string>
    <string name="search">Search</string>
    <string name="tripDate">tripDate</string>
    <string name="currentTrip">set up the current Trip</string>
    <!--<string name="AllFriends">current trip's friends</string>-->
    <string name="currentName">current name</string>
    <string name="Update">Update</string>
    <string name="Arrival">Arrival</string>
</resources>
