<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:orientation="vertical"-->
    <!--tools:context=".MainActivity"-->
    <!-->-->
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:text="Let's start your trip!"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name:"
        android:textSize="20sp"/>
    <EditText
        android:id = "@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:ems="10"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="friends"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/plusFriends"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="+"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Destination:"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food"
        android:textSize="20sp"/>
    <TextView
        android:id = "@+id/destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/checkPlace"
        android:text="Check"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/Search"
        android:text="Search"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="time"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id ="@+id/tripDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Date"/>
        <EditText
            android:id="@+id/create_trip_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/tripDateHint"
            android:cursorVisible="false"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TPtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/CreateTriptime"/>
        <EditText
            android:id="@+id/tripTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/tripTimeHint"
            android:inputType="text"
            android:cursorVisible="false"
            android:selectAllOnFocus="true" />
    </LinearLayout>
    <!--<EditText-->
        <!--android:id = "@+id/time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/time"-->
        <!--android:textSize="20sp"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/create"
            android:text="Start"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:text="Cancel"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
